--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = 'concept-cloud'
 include 'concept-cloud-usage'
 include 'concept-cloud-web'
 include 'concept-domain-basic'
+include 'concept-domain-system'
 
