--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,5 @@ include 'concept-cloud-usage'
 include 'concept-cloud-web'
 include 'concept-domain-basic'
 include 'concept-domain-system'
+include 'sample'
 
