--- a/build.gradle
+++ b/build.gradle
@@ -45,4 +45,10 @@ allprojects {
     tasks.withType(JavaCompile) {
         options.encoding = "UTF-8"
     }
+
+    if (project.name != 'sample') {
+        bootJar.enabled = false
+        jar.enabled = true
+        jar.archiveClassifier.set('')
+    }
 }
